@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-24T01:50:14Z",
+  "timestamp" : "2022-11-25T01:46:33Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 652,
-  "uniques" : 411,
+  "count" : 653,
+  "uniques" : 412,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
