@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 4,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2022-11-23T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
