@@ -1,3 +1,11 @@
+2022-11-25T01:46:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544710541 # 644
+* notice: last 14d: unq all: 4 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 411 652
+* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 412 653
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-24]
+
 2022-11-24T01:50:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3537038579 # 641
 * notice: last 14d: unq all: 4 23
